cmake_minimum_required(VERSION 3.20)
project(untitledProj)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitledProj main.cpp Date.cpp Date.h Log.cpp Log.h Light_String_Class/MyString.cpp Light_String_Class/MyString.h Vector_Class/Vector.cpp Product.cpp Product.h Shelf.cpp Shelf.h Section.cpp Section.h Storage.cpp Storage.h)
